--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource-variable/outfit": "^5.0.8",
     "@fontsource/outfit": "^5.0.8",
     "@fontsource/roboto": "^5.0.8",
+    "contentful": "^10.6.1",
     "fontsource-roboto": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
