--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "contentful": "^10.6.1",
     "fontsource-roboto": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
